test/types/typedefs/bradc/redefineTypeNames3.good
redefineTypeNames3.chpl:3: error: attempt to redefine reserved type 'int'
redefineTypeNames3.chpl:4: error: attempt to redefine reserved type 'real'
redefineTypeNames3.chpl:5: error: attempt to redefine reserved type 'imag'
redefineTypeNames3.chpl:6: error: attempt to redefine reserved type 'string'
redefineTypeNames3.chpl:7: error: attempt to redefine reserved type 'complex'
